# data-anvil-rs

./: Cargo.toml  LICENSE  README.md
src/: app.rs  localization.rs  main.rs
src/screens/: main_menu.rs  mod.rs  uuid_generator.rs  xml_to_json.rs
src/ui/: mod.rs
