[package]
name = "rust_utilities_app"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI фреймворк
eframe = "0.27"
egui = "0.27"

# Утилиты для работы с данными
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
uuid = { version = "1.0", features = ["v4"] }

# Работа с файлами
rfd = "0.14"  # Диалоги открытия/сохранения файлов

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"