[package]
name = "rust_utilities_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
uuid = { version = "1.0", features = ["v4"] }

rfd = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"